--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Freelancer - Start Bootstrap Theme</title>
+  <title>Vitold Radkevich - Java Developer</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -54,7 +54,7 @@
       <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Vitold Radkevich</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -66,7 +66,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+      <p class="masthead-subheading font-weight-light mb-0">Java - Web Developer - Spring</p>
 
     </div>
   </header>
@@ -187,18 +187,18 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+          <p class="lead">I am a purposeful person. I quickly find a common language with people, pleasant in communication. Quickly trained and polite in communication. I do 15 minutes of physical activity every morning. Action plan for the day, week, month. I like self-study: I independently studied Spring, Hibernate. Constantly improving my theoretical knowledge in practice.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          <p class="lead">I studied Python myself, then I realized that I wanted to learn Java. I have graduated from IT Academy Java Fundamentals courses.</p>
         </div>
       </div>
 
       <!-- About Section Button -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
+        <a class="btn btn-xl btn-outline-light" href="https://github.com/Vitold-sys">
           <i class="fas fa-download mr-2"></i>
-          Free Download!
+          Here you can view my code
         </a>
       </div>
 
@@ -228,9 +228,13 @@
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Name</label>
-                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
+                <label>Linkedin</label>
+               <div class="text-center mt-4">
+        <a class="btn btn-xl btn-outline-light" href="https://www.linkedin.com/in/vitold-radkevich/">
+          <i class="fas fa-download mr-2"></i>
+          My Linkedin
+        </a>
+      </div>
               </div>
             </div>
             <div class="control-group">
