--- a/index.html
+++ b/index.html
@@ -220,7 +220,12 @@
         </div>
         <div class="divider-custom-line"></div>
       </div>
-
+  <div class="text-center mt-4">
+        <a class="btn btn-xl btn-outline-light" href="https://www.linkedin.com/in/vitold-radkevich/">
+          <i class="fas fa-download mr-2"></i>
+          My Linkedin
+        </a>
+      </div>
       <!-- Contact Section Form -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
