--- a/index.html
+++ b/index.html
@@ -220,12 +220,7 @@
         </div>
         <div class="divider-custom-line"></div>
       </div>
-  <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://www.linkedin.com/in/vitold-radkevich/">
-          <i class="fas fa-download mr-2"></i>
-          My Linkedin
-        </a>
-      </div>
+
       <!-- Contact Section Form -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -233,37 +228,11 @@
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
             <div class="control-group">
                <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://www.linkedin.com/in/vitold-radkevich/">
+        <a class="btn btn-info" href="https://www.linkedin.com/in/vitold-radkevich/">
           <i class="fas fa-download mr-2"></i>
-          My Linkedin
+          Linkedin
         </a>
       </div>          
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Email Address</label>
-                <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Phone Number</label>
-                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Message</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
             </div>
           </form>
         </div>
