--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <!-- About Section Button -->
       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="https://github.com/Vitold-sys">
-          <i class="fas fa-download mr-2"></i>
+          <i class="fa fa-github mr-2"></i>
           Here you can view my code
         </a>
       </div>
