--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <!-- About Section Button -->
       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="https://github.com/Vitold-sys">
-          <i class="fa fa-github mr-2"></i>
+          <i class="fa fa-github mr-2" aria-hidden="true"></i>
           Here you can view my code
         </a>
       </div>
@@ -229,13 +229,13 @@
             <div class="control-group">
                <div class="text-center mt-4">
         <a class="btn btn-info" href="https://www.linkedin.com/in/vitold-radkevich/">
-          <i class="fa fa-linkedin" mr-2"></i>
+          <i class="fa fa-linkedin mr-2"></i>
           Linkedin
         </a>
       </div>
       <div class="text-center mt-4">
         <a class="btn btn-info" href="mailto:radkevich_vitold@mail.ru">
-          <i class="fa fa-share" mr-2"></i>
+          <i class="fa fa-share mr-2"></i>
           Mail
         </a>
       </div>               
