--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fa fa-arrow-circle-o-down"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
