--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fa fa-arrow-circle-o-down"></i>
+          <i class="fas fa-star"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -291,7 +291,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Webber</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -303,7 +303,17 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/cabin.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">Chat web application;
+There is a welcome page, login page, user additions (when adding a user, you must specify a username, password, as well as mail, to which a message will come with a link to account activation); After login, the main functionality of the application is available: chat; editing the password and Mail specified during registration is also available;
+<br>Technologies used the following:
+<br>Spring - to create an MVC application;
+<br>Freemarker - page templates;
+<br>Bootstrap - for page layout;
+<br>Flyway - for database migration;</p>
+ <a class="btn btn-info" href="https://webber1.herokuapp.com/">
+           <i class="fa fa-share" mr-2"></i>
+          Webber
+        </a>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
