--- a/index.html
+++ b/index.html
@@ -238,6 +238,12 @@
           <i class="fa fa-envelope" mr-2"></i>
           Mail
         </a>
+      </div>
+       <div class="text-center mt-4">
+        <a class="btn btn-info" src="CV/CV-Radkevich-EN.docx">
+           <i class="fa fa-share" mr-2"></i>
+          Check my CV
+        </a>
       </div>               
             </div>
           </form>
@@ -311,7 +317,7 @@ There is a welcome page, login page, user additions (when adding a user, you mus
 <br>Bootstrap - for page layout;
 <br>Flyway - for database migration;</p>
  <a class="btn btn-info" href="https://webber1.herokuapp.com/">
-           <i class="fa fa-share" mr-2"></i>
+           <i class="fa fa-share" mr-2></i>
           Webber
         </a>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
