--- a/index.html
+++ b/index.html
@@ -229,19 +229,19 @@
             <div class="control-group">
                <div class="text-center mt-4">
         <a class="btn btn-info" href="https://www.linkedin.com/in/vitold-radkevich/">
-           <i class="fa fa-share" mr-2"></i>
+           <i class="fa fa-share mr-2"></i>
           Linkedin
         </a>
       </div>
       <div class="text-center mt-4">
         <a class="btn btn-info" href="mailto:radkevich_vitold@mail.ru">
-          <i class="fa fa-envelope" mr-2"></i>
+          <i class="fa fa-envelope mr-2"></i>
           Mail
         </a>
       </div>
        <div class="text-center mt-4">
         <a class="btn btn-info" src="CV/CV-Radkevich-EN.doc">
-           <i class="fa fa-share" mr-2"></i>
+           <i class="fa fa-share mr-2"></i>
           Check my CV
         </a>
       </div>               
