--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </a>
       </div>
        <div class="text-center mt-4">
-        <a class="btn btn-info" src="CV/CV-Radkevich-EN.doc">
+        <a class="btn btn-info" href="CV/CV-Radkevich-EN.doc">
            <i class="fa fa-share mr-2"></i>
           Check my CV
         </a>
