--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@ There is a welcome page, login page, user additions (when adding a user, you mus
                 <img class="img-fluid rounded mb-5" src="img/portfolio/cake.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">An application that displays the weather for 5 days in advance, weather information was taken from the site: temperature, current state, humidity, Pressure, Wind speed.
-<br>-For parsing the page used Jsoup;
-<br>-To select the necessary information regular expressions;
-<br>-To build the project I used Maven;</p>
+<br>- For parsing the page used Jsoup;
+<br>- To select the necessary information regular expressions;
+<br>- To build the project I used Maven;</p>
 <a class="btn btn-info" href="https://lnkd.in/e8KUqvD">
            <i class="fa fa-share" mr-2></i>
           Link to the project
@@ -392,7 +392,7 @@ There is a welcome page, login page, user additions (when adding a user, you mus
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Core Fundamentals</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -404,7 +404,11 @@ There is a welcome page, login page, user additions (when adding a user, you mus
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/circus.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">Java Core, Java Fundamentals examples of simple tasks.</p>
+                <a class="btn btn-info" href="https://github.com/Vitold-sys/Java-core">
+           <i class="fa fa-share" mr-2></i>
+          Repository
+        </a>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
