--- a/index.html
+++ b/index.html
@@ -161,6 +161,18 @@
             <img class="img-fluid" src="img/portfolio/itra.png" alt="">
           </div>
         </div>
+
+       <!-- Portfolio Item 7 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/jsp.png" alt="">
+          </div>
+        </div>
         </div>
       <!-- /.row -->
 
@@ -541,7 +553,7 @@ Logging into the application is done through goolge account, after entering the 
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/itra.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Bookreader;
+                <p class="mb-5">Bookreader
 An application for reading books, the ability to save and add books, write comments.
 For development I used:
 <br>Spring boot
@@ -552,6 +564,58 @@ For development I used:
 In addition, I conducted tests with connection to a test database.
 </p>
  <a class="btn btn-info" href="https://github.com/Vitold-sys/bookreader1">
+           <i class="fa fa-share" mr-2></i>
+          Repository
+        </a>
+                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-times fa-fw"></i>
+                  Close Window
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Portfolio Modal 7 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-labelledby="portfolioModal7Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Vitbort</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/jsp.png" alt="">
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5">Vitbort
+An application for chat, the ability to save and add messages.
+For development I used:
+<br>Servlet
+<br>JSP
+<br>JSTL
+<br>Sessions
+<br>Front Controller
+<br>The administrator can delete users, change their roles. Each user can change their mail and password.
+</p>
+ <a class="btn btn-info" href="https://bitbucket.org/RadkevichVitold/messenger/src/Vitold/">
            <i class="fa fa-share" mr-2></i>
           Repository
         </a>
