Add rest project
Add rest project

--- a/index.html
+++ b/index.html
@@ -173,6 +173,18 @@
             <img class="img-fluid" src="img/portfolio/jsp.png" alt="">
           </div>
         </div>
+
+        <!-- Portfolio Item 8 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/rest.png" alt="">
+          </div>
+        </div>
         </div>
       <!-- /.row -->
 
@@ -331,6 +343,10 @@ There is a welcome page, login page, user additions (when adding a user, you mus
            <i class="fa fa-share" mr-2></i>
           Webber
         </a>
+        <a class="btn btn-info" href="https://github.com/Vitold-sys/Vitbort_Spring_MVC">
+           <i class="fa fa-share" mr-2></i>
+          Repository
+        </a> 
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -616,6 +632,58 @@ For development I used:
 <br>The administrator can delete users, change their roles. Each user can change their mail and password.
 </p>
  <a class="btn btn-info" href="https://bitbucket.org/RadkevichVitold/messenger/src/Vitold/">
+           <i class="fa fa-share" mr-2></i>
+          Repository
+        </a>
+                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-times fa-fw"></i>
+                  Close Window
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Portfolio Modal 8 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-labelledby="portfolioModal8Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Rest-Vitbort</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/rest.png" alt="">
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5">Rest-Vitbort
+An application for chat, the ability to save and add messages.
+For development I used:
+<br>Spring 
+<br>Hibernate
+<br>Postman
+<br>Swagger
+<br>Front Controller
+<br>Postgres
+</p>Jwt
+ <a class="btn btn-info" href="https://github.com/Vitold-sys/Vitbort_social">
            <i class="fa fa-share" mr-2></i>
           Repository
         </a>
