--- a/index.html
+++ b/index.html
@@ -682,7 +682,8 @@ For development I used:
 <br>Swagger
 <br>Front Controller
 <br>Postgres
-</p>Jwt
+<br>Jwt
+</p>
  <a class="btn btn-info" href="https://github.com/Vitold-sys/Vitbort_social">
            <i class="fa fa-share" mr-2></i>
           Repository
