Update personal info

--- a/index.html
+++ b/index.html
@@ -210,10 +210,11 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">I am a purposeful person. I quickly find a common language with people, pleasant in communication. Quickly trained and polite in communication. I do 15 minutes of physical activity every morning. Action plan for the day, week, month. I like self-study: I independently studied Spring, Hibernate. Constantly improving my theoretical knowledge in practice.</p>
+          <p class="lead">I am a purposeful person. I quickly find a common language with people, pleasant in communication. Quickly trained and polite in communication. 40 minutes a day I devote to improving English skills. Action plan for the day, week, month. I like self-study: I independently studied Spring, Hibernate. Constantly improving my theoretical knowledge in practice.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">I studied Python myself, then I realized that I wanted to learn Java. I have graduated from IT Academy Java Fundamentals courses.</p>
+          <p class="lead">I studied Python myself, then I realized that I wanted to learn Java. I have graduated from IT Academy Java Fundamentals courses. Finished internship as a Java developer with success.</p>
+          <p class="lead"> I attend events and conferences that helps me grow as a specialist</p>
         </div>
       </div>
 
@@ -333,7 +334,7 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/cabin.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Chat web application;
-There is a welcome page, login page, user additions (when adding a user, you must specify a username, password, as well as mail, to which a message will come with a link to account activation); After login, the main functionality of the application is available: chat; editing the password and Mail specified during registration is also available;
+<br>There is a welcome page, login page, user additions (when adding a user, you must specify a username, password, as well as mail, to which a message will come with a link to account activation); After login, the main functionality of the application is available: chat; editing the password and Mail specified during registration is also available;
 <br>Technologies used the following:
 <br>Spring - to create an MVC application;
 <br>Freemarker - page templates;
@@ -386,7 +387,7 @@ There is a welcome page, login page, user additions (when adding a user, you mus
                 <img class="img-fluid rounded mb-5" src="img/portfolio/belbort.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Web application;
-Logging into the application is done through goolge account, after entering the application displays the username, gender, age, profile photo. You can add messages, exchange links, with the auto-play function.
+<br>Logging into the application is done through goolge account, after entering the application displays the username, gender, age, profile photo. You can add messages, exchange links, with the auto-play function.
 <br>Technologies used the following:
 <br>Spring - to create an MVC application;
 <br>Gradle - to build project;
@@ -570,8 +571,8 @@ Logging into the application is done through goolge account, after entering the 
                 <img class="img-fluid rounded mb-5" src="img/portfolio/itra.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Bookreader
-An application for reading books, the ability to save and add books, write comments.
-For development I used:
+<br>An application for reading books, the ability to save and add books, write comments.
+<br>For development I used:
 <br>Spring boot
 <br>Hibernate
 <br>Freemarker
@@ -622,8 +623,8 @@ In addition, I conducted tests with connection to a test database.
                 <img class="img-fluid rounded mb-5" src="img/portfolio/jsp.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Vitbort
-An application for chat, the ability to save and add messages.
-For development I used:
+<br>An application for chat, the ability to save and add messages.
+<br>For development I used:
 <br>Servlet
 <br>JSP
 <br>JSTL
@@ -674,8 +675,8 @@ For development I used:
                 <img class="img-fluid rounded mb-5" src="img/portfolio/rest.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Rest-Vitbort
-An application for chat, the ability to save and add messages.
-For development I used:
+<br>An application for chat, the ability to save and add messages.
+<br>For development I used:
 <br>Spring 
 <br>Hibernate
 <br>Postman
