--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">I studied Python myself, then I realized that I wanted to learn Java. I have graduated from IT Academy Java Fundamentals courses. Finished internship as a Java developer with success.</p>
-          <p class="lead"> I attend events and conferences that helps me grow as a specialist</p>
+          <p class="lead"> I attend events and conferences that helps me grow as a specialist.</p>
         </div>
       </div>
 
