Update background, font awesome, contact info

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Theme CSS -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/freelancer.css" rel="stylesheet">
 
 </head>
 
@@ -60,7 +60,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-graduation-cap"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -82,7 +82,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-box-open"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -202,7 +202,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+         <i class="fas fa-id-card"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -221,7 +221,7 @@
       <!-- About Section Button -->
       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="https://github.com/Vitold-sys">
-          <i class="fas fa-download mr-2"></i>
+          <i class="fab fa-github mr-2"></i>
           Here you can view my code
         </a>
       </div>
@@ -250,25 +250,31 @@
         <div class="col-lg-8 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="control-group">
+            <div class="btn-group">
                <div class="text-center mt-4">
-        <a class="btn btn-info" href="https://www.linkedin.com/in/vitold-radkevich/">
-           <i class="fa fa-share mr-2"></i>
+        <a class="btn btn-info-contact" href="https://www.linkedin.com/in/vitold-radkevich/">
+          <i class="fab fa-linkedin"></i>
           Linkedin
         </a>
       </div>
       <div class="text-center mt-4">
-        <a class="btn btn-info" href="mailto:radkevich_vitold@mail.ru">
-          <i class="fa fa-envelope mr-2"></i>
+        <a class="btn btn-info-contact" href="mailto:radkevich_vitold@mail.ru">
+          <i class="fab fa-google"></i>
           Mail
         </a>
       </div>
        <div class="text-center mt-4">
-        <a class="btn btn-info" href="CV/CV-Radkevich-EN.doc">
-           <i class="fa fa-share mr-2"></i>
+        <a class="btn btn-info-contact" href="CV/CV-Radkevich-EN.doc">
+           <i class="far fa-file-word"></i>
           Check my CV
         </a>
-      </div>               
+      </div>
+      <div class="text-center mt-4">
+        <a class="btn btn-info-contact" href="tel:+375295501501">
+           <i class="fas fa-mobile-alt"></i>
+          +375 (29) 5-501-501
+        </a>
+      </div>                
             </div>
           </form>
         </div>
@@ -285,7 +291,10 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">Belarus, Minsk</p>
+          <div class="lead mb-0">
+          <i class="fas fa-map-marker-alt"></i>
+           Belarus, Minsk	
+          </div>
         </div>
       </div>
     </div>
